Kelsey Development Sandbox/src/objects/DS_Background_Family_Info_B__c.object
<CustomObject>
    <fields>
        <fullName>BMILFAMILY__c</fullName>
        <description>Is anyone in your child&apos;s family or someone close to you currently serving on active duty in or retired/separated from the Armed Forces, the Reserves or the National Guard</description>
        <label>BMILFAMILY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMILMOVE__c</fullName>
        <description>How many times did the family move or relocate for military reasons or orders</description>
        <label>BMILMOVE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMILSELF__c</fullName>
        <description>Are you currently serving on active duty in the Armed Forces, the Reserves, or the National Guard</description>
        <label>BMILSELF</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMILSERV__c</fullName>
        <description>What is the total number of immediate familiy members who have served in the miliatry since 2001</description>
        <label>BMILSERV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMKILACC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service member was killed: Accidental death</description>
        <label>BMKILACC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMKILCOM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service member was killed: Combat</description>
        <label>BMKILCOM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMKILMED__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service member was killed: Medical Condition or Illness</description>
        <label>BMKILMED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMKILOSP__c</fullName>
        <description>Service member was killed: Other specified</description>
        <label>BMKILOSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMKILOTH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service member was killed: Other</description>
        <label>BMKILOTH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMKILSUIC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service member was killed: Suicide</description>
        <label>BMKILSUIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMKILUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service member was killed: Unknown</description>
        <label>BMKILUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMKIL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service member was killed</description>
        <label>BMKIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMOMCTY__c</fullName>
        <description>3. If no, in what country was the child&apos;s mother born?</description>
        <label>BMOMCTY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMOMMIL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1. Mother is service member</description>
        <label>BMOMMIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMOMUS__c</fullName>
        <description>2. Was the child&apos;s mother born in the U.S.?</description>
        <label>BMOMUS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMPIAMP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service members experienced Physical Injury: Amputation</description>
        <label>BMPIAMP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMPIBRN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service members experienced Physical Injury: Burns</description>
        <label>BMPIBRN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMPICPF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service members experienced Physical Injury: Chronic Pain or fatigue</description>
        <label>BMPICPF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMPIOSP__c</fullName>
        <description>Service members experienced Physical Injury: other specified</description>
        <label>BMPIOSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMPIOTH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service members experienced Physical Injury:other</description>
        <label>BMPIOTH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMPITBI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service members experienced Physical Injury: Traumatic Brain Injury/ Blast-Related Concussion</description>
        <label>BMPITBI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMPIUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service members experienced Physical Injury: Unknown</description>
        <label>BMPIUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMPI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service members experienced Physical Injury</description>
        <label>BMPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMSTDEP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service members experienced Stress symptoms: Depression</description>
        <label>BMSTDEP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMSTOSP__c</fullName>
        <description>Service members experienced Stress symptoms: Other Specified</description>
        <label>BMSTOSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMSTOTH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service members experienced Stress symptoms: Other</description>
        <label>BMSTOTH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMSTPTSD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service members experienced Stress symptoms: PTSD</description>
        <label>BMSTPTSD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMSTSUB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Substance use or abuse</description>
        <label>BMSTSUB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMSTSUIC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service members experienced Stress symptoms: Suicidal thoughts or attempts</description>
        <label>BMSTSUIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMSTUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service members experienced Stress symptoms: Unknown</description>
        <label>BMSTUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMST__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service members experienced Stress symptoms</description>
        <label>BMST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BNOMHOUSESP__c</fullName>
        <description>In the past 30 days, where have you [has your child] been living most of the time? SPECIFIED</description>
        <label>BNOMHOUSESP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BNOMHOUSE__c</fullName>
        <label>BNOMHOUSE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BNTDTOXN__c</fullName>
        <label>BNTDTOXN</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BNTDTOXRU__c</fullName>
        <label>BNTDTOXRU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BNTERN__c</fullName>
        <label>BNTERN</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BNTERRU__c</fullName>
        <label>BNTERRU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BNTHOMEN__c</fullName>
        <label>BNTHOMEN</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BNTHOMERU__c</fullName>
        <label>BNTHOMERU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BNTHOSPN__c</fullName>
        <label>BNTHOSPN</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BNTHOSPRU__c</fullName>
        <label>BNTHOSPRU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BNTJAILN__c</fullName>
        <label>BNTJAILN</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BNTJAILRU__c</fullName>
        <label>BNTJAILRU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BNTTOTN__c</fullName>
        <label>BNTTOTN</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BNZCODESP__c</fullName>
        <description>Zip Code specified.</description>
        <label>BNZCODESP</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BORIENTSP__c</fullName>
        <description>Which of the following do you consider yourself to be (for clients 12 or older)? Other, please specify</description>
        <label>BORIENTSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BORIENT__c</fullName>
        <description>Which of the following do you consider yourself to be (for clients 12 or older)?</description>
        <label>BORIENT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOTHMILSP__c</fullName>
        <description>1. Other family please specify is service member</description>
        <label>BOTHMILSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOTHMIL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1. Other family is service member</description>
        <label>BOTHMIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPARENG__c</fullName>
        <description>8. How well does the parent speak English?</description>
        <label>BPARENG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPINANY__c</fullName>
        <description>Parent covered by any insurance</description>
        <label>BPINANY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPINCHIP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Parent&apos;s insurance CHIP</description>
        <label>BPINCHIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPINFFS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Parent&apos;s insurance Fee-for-Service</description>
        <label>BPINFFS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPINHMO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Parent&apos;s insurance HMO</description>
        <label>BPINHMO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPINIH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Parent&apos;s insurance Indian Health</description>
        <label>BPINIH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPINMEDD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Parent&apos;s insurance Medicaid</description>
        <label>BPINMEDD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPINMEDR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Parent&apos;s insurance Medicare</description>
        <label>BPINMEDR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPINMHC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Parent&apos;s insurance is Military Health</description>
        <label>BPINMHC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPINOPRI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Parent&apos;s insurance Other Private</description>
        <label>BPINOPRI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPINOPRS__c</fullName>
        <description>Parent&apos;s insurance Other Private Specified</description>
        <label>BPINOPRS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPINOPSP__c</fullName>
        <description>Parent&apos;s insurance Other Public Specified</description>
        <label>BPINOPSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPINOPUB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Parent&apos;s insurance Other Public</description>
        <label>BPINOPUB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPINPPO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Parent&apos;s insurance PPO</description>
        <label>BPINPPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPINPRIV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Parent&apos;s insurance Private</description>
        <label>BPINPRIV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPINPUB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Parent&apos;s insurance Public</description>
        <label>BPINPUB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPREDNW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Emergency Department is caring for child</description>
        <label>BPREDNW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPRESMO__c</fullName>
        <label>BPRESMO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPRIMRES__c</fullName>
        <description>Child&apos;s current primary residence</description>
        <label>BPRIMRES</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPRIMRSP__c</fullName>
        <label>BPRIMRSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPRNONW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No healthcare provider is caring for child</description>
        <label>BPRNONW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPROHPL__c</fullName>
        <label>BPROHPL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>More than 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPROSPNW__c</fullName>
        <description>Other healthcare provider Specified</description>
        <label>BPROSPNW</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPROTHNW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Other healthcare provider</description>
        <label>BPROTHNW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPROTNW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Occupational Therapy, Physical Therapy and/or Speech is the provider</description>
        <label>BPROTNW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPRPEDNW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Primary Care Provider caring for child</description>
        <label>BPRPEDNW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPRRPCNW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Routine Preventative Care</description>
        <label>BPRRPCNW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPRSPNW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specialist is caring for child</description>
        <label>BPRSPNW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPRUCNW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Urgent Care Providers</description>
        <label>BPRUCNW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPRUKNW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Unknown healthcare provider</description>
        <label>BPRUKNW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPSTASY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Parents status Asylee</description>
        <label>BPSTASY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPSTIMM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Parents status Immigrant</description>
        <label>BPSTIMM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPSTNONE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6. Parents&apos; status None</description>
        <label>BPSTNONE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPSTREF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Parents status Refugee</description>
        <label>BPSTREF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPSTUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Parents status Unknown</description>
        <label>BPSTUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPUSBORNSP__c</fullName>
        <description>If no, In what country was the parent/caregiver born?</description>
        <label>BPUSBORNSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPUSBORN__c</fullName>
        <description>Parent born in US</description>
        <label>BPUSBORN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BREFCAMP__c</fullName>
        <description>Did the child ever live in a refugee or detention camp?</description>
        <label>BREFCAMP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BREFMHP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Referral source is Medical</description>
        <label>BREFMHP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BREFMTH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mental Health Provider</description>
        <label>BREFMTH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BREFSCOL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Referral source is School</description>
        <label>BREFSCOL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BREFSCT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Referral source is Courts</description>
        <label>BREFSCT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BREFSCW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Referral source is Child Welfare</description>
        <label>BREFSCW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BREFSOSP__c</fullName>
        <description>Referral source is Other Specify</description>
        <label>BREFSOSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BREFSPR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Referral source is Peer</description>
        <label>BREFSPR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BREFSRO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Referral source is Other</description>
        <label>BREFSRO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BREFSR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Referral source is Self</description>
        <label>BREFSR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRHCCH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BRHCCH</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>